# Malom

./: CMakeLists.txt  README.md  app.cpp  app.h  controller.cpp  controller.h  game.cpp  game.h  game_mechanic.cpp  game_mechanic.h  main.cpp  map.cpp  map.h  phase.h  piece.cpp  piece.h  player.cpp  player.h  point.cpp  point.h  position.cpp  position.h  shell.cpp  shell.h
NagyHazi_MALOM/: CMakeLists.txt  Specifikáció.docx  app.cpp  app.h  colour.h  controller.cpp  controller.h  corner_point.cpp  corner_point.h  edge_point.cpp  edge_point.h  game.cpp  game.h  game_mechanic.cpp  main.cpp  map.cpp  map.h  name.cpp  name.h  piece.cpp  piece.h  player.cpp  player.h  point.cpp  point.h  position.cpp  position.h  shell.cpp  shell.h  turn.h
